--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
-  "name": "@umijs/openapi",
-  "version": "1.8.3",
+  "name": "@powerfulyang/umi-openapi",
+  "version": "1.8.6",
   "description": "",
+  "publishConfig": {
+    "access": "public"
+  },
   "repository": {
     "type": "git",
     "url": "git+git@github.com:chenshuai2144/openapi2typescript.git"
@@ -16,7 +19,7 @@
   "scripts": {
     "build": "tsc",
     "localConvert4Project": "rm -rf ./test/servers/ ./test/file-servers/ &&  npm run build && cd ./test && node ./test.js && cd .. && rm -rf /Users/fd/wj/psp-web-pro/src/services/wj && mv ./test/servers/api/  /Users/fd/wj/psp-web-pro/src/services/wj",
-    "prepublishOnly": "npm run build && np --no-cleanup --yolo --no-publish --any-branch",
+    "prepublishOnly": "npm run build",
     "start": "tsc -w",
     "test": "rm -rf ./test/servers/ ./test/file-servers/ &&  npm run build && cd ./test && node ./test.js && cd .."
   },
